--- a/RexLogicModule/CMakeLists.txt
+++ b/RexLogicModule/CMakeLists.txt
@@ -79,6 +79,7 @@ LinkEntityComponent(EntityComponents/EC_Menu EC_Menu)
 LinkEntityComponent(EntityComponents/EC_MenuContainer EC_MenuContainer)
 LinkEntityComponent(EntityComponents/EC_MenuItem EC_MenuItem)
 LinkEntityComponent(EntityComponents/EC_LaserPointer EC_LaserPointer)
+LinkEntityComponent(EntityComponents/EC_QML EC_QML)
 
 link_modules (Core Foundation Interfaces Scene OgreRenderingModule AssetModule AvatarModule RexCommon
     HttpUtilities RpcUtilities ProtocolUtilities ProtocolModuleOpenSim ProtocolModuleTaiga EnvironmentModule
